# treeSitterGame

./: .gitignore  CMakeLists.txt  README.md
.gitlab/issue_templates/: bug_or_issue.md  feature.md
apps/: CMakeLists.txt  README.md
apps/client/: CMakeLists.txt
apps/s1-client-ncurses/: CMakeLists.txt  chatclient.cpp
apps/s1-server/: CMakeLists.txt  chatserver.cpp  chatserver.h  serverdriver.cpp
apps/server/: CMakeLists.txt  Room.h  ServerManager.h  server.cpp
apps/server-jar-prototype/: CMakeLists.txt  chatserver.h
apps/server-jar-prototype/s1-server-model/: CMakeLists.txt
apps/server-jar-prototype/s1-server-model/include/: JoinCode.h  Room.h
apps/server-jar-prototype/s1-server-model/src/: Room.cpp
apps/server-san-prototype/: CMakeLists.txt  README.md  Room.h  ServerManager.cpp  ServerManager.h  main.cpp  server.cpp
apps/server-v1/: CMakeLists.txt  main.cpp
apps/server-v1/Room/: CMakeLists.txt
apps/server-v1/Room/include/: Room.h
apps/server-v1/ServerManager/: CMakeLists.txt  ServerManager.cpp
apps/server-v1/ServerManager/include/: ServerManager.h
apps/server-v1/StringHandling/: CMakeLists.txt
apps/server-v1/User/: CMakeLists.txt
games/: for-each-rps.game  looping.game  nesting-test.game  parallel-for-rps.game  rule-manager-test.game
lib/: CMakeLists.txt  README.md
lib/GameState/: CMakeLists.txt  README.md  gameState.cpp
lib/GameState/ConfigurationState/: CMakeLists.txt  configurationState.cpp
lib/GameState/ConfigurationState/include/: configurationState.h
lib/GameState/ConstantState/: CMakeLists.txt  ConstantState.cpp  constantState.cpp
lib/GameState/ConstantState/include/: constantState.h
lib/GameState/DataValue/: CMakeLists.txt  dataValue.cpp
lib/GameState/DataValue/include/: dataValue.h
lib/GameState/PerPlayerState/: CMakeLists.txt  CMakelists.txt  perPlayerState.cpp
lib/GameState/PerPlayerState/include/: perPlayerState.h
lib/GameState/StateManager/: CMakeLists.txt  stateManager.cpp
lib/GameState/StateManager/include/: stateManager.h
lib/GameState/VariableState/: CMakeLists.txt  variableState.cpp
lib/GameState/VariableState/include/: variableState.h
lib/GameState/include/: gameState.h
lib/Room/: CMakeLists.txt  Room.cpp
lib/ServerManager/: CMakeLists.txt
lib/ServerManager/include/: ServerManager.h
lib/StringHandling/: CMakeLists.txt  StringHandling.cpp
lib/StringHandling/include/: StringHandling.h
lib/TreeManager/: CMakeLists.txt  treeManager.cpp
lib/TreeManager/include/: treeManager.h
lib/User/: CMakeLists.txt  User.cpp
lib/User/include/: User.h
lib/action/: CMakeLists.txt  action.cpp
lib/action/include/: action.h
lib/game/: CMakeLists.txt  game.cpp
lib/game/include/: FakeGame.h  Game.h  GameInterface.h
lib/networking/include/: Server.h
lib/networking/src/: Server.cpp
lib/node/: CMakeLists.txt
lib/node/include/: node.h
lib/parser/: CMakeLists.txt  parser.cpp
lib/parser/include/: parser.h
lib/rule/: CMakeLists.txt  rule.cpp  ruleFactories.cpp  ruleManager.cpp  ruleParser.cpp  ruleTranslator.cpp  rules.cpp
lib/rule/include/: rule.h  ruleFactories.h  ruleManager.h  ruleParser.h  ruleTranslator.h  rules.h
lib/rules/: CMakeLists.txt
lib/rules/include/: rule.h  rules.h
lib/s1-server-model/: CMakeLists.txt
lib/s1-server-model/include/: Room.h  UUIDGenerator.h  User.h
lib/s1-server-model/src/: JoinCode.cpp  Room.cpp  UUIDGenerator.cpp  User.cpp
tests/: CMakeLists.txt  README.md  hello_world.cpp  parser_test.cpp
tests/Game/: CMakeLists.txt  game_test.cpp
tests/GameState/: CMakeLists.txt  dataValueEqualityTest.cpp  dataValueMethodsTest.cpp  dataValueStressTest.cpp  dataValueTest.cpp  gameStateTest.cpp
tests/TreeManager/: CMakeLists.txt  treeManagerTest.cpp
tests/parser/: CMakeLists.txt  testparser.cpp
tests/rules/: CMakeLists.txt  rule_test.cpp
tests/server-v1/: CMakeLists.txt  server_manager_test.cpp
