add_subdirectory(networking)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/parser) 
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/rules)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/Room)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/User)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/ServerManager)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/StringHandling)

