add_subdirectory(networking)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/rule)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/Room)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/User)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/ServerManager)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/StringHandling)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/GameState)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/TreeManager)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/Game)


